# nexa-core

./: .gitignore  CHANGELOG.md  Cargo.toml  Cross.toml  Dockerfile.musl  PROJECT_STATUS.md  README.md  build.sh  config.example.yml  config.yml  dir-tree.md  test_nexa.sh  tutorial.md
.cargo/: config.toml
benches/: cluster_bench.rs  loadbalancer_bench.rs
docs/: architecture.md  dir-tree.md  manual.md  openapi.yaml  serve_docs.py  swagger.html
release/: nexa  nexa-1.1.0  nexa-1.1.1  nexa-latest  tutorial.md  v1.0.0.md
release/1.2.0/: nexa
release/1.2.1/: nexa
scripts/: build_and_test.sh
src/: agent.rs  config.rs  error.rs  lib.rs  logging.rs  main.rs  settings.rs  startup.rs  utils.rs
src/agent/: mod.rs
src/agent_types/: deepseek.rs
src/agent_types/deepseek/: generation.rs
src/api/: mod.rs
src/cli/: cli_handler.rs  mod.rs
src/config/: mod.rs
src/context/: mod.rs
src/error/: mod.rs
src/gui/: app.rs  components.rs  mod.rs  styles.rs  types.rs  utils.rs
src/gui/components/: agents.rs  common.rs  dashboard.rs  logs.rs  mod.rs  settings.rs  styles.rs  tasks.rs  workflows.rs
src/llm/: mod.rs  system_helper.rs  test_utils.rs  tests.rs
src/mcp/: buffer.rs  cluster.rs  cluster_processor.rs  config.rs  loadbalancer.rs  metrics.rs  mod.rs  processor.rs  protocol.rs  registry.rs  server.rs  tokens.rs
src/mcp/cluster/: manager.rs  mod.rs
src/mcp/processor/: tests.rs
src/mcp/server/: config.rs  mod.rs
src/memory/: mod.rs
src/models/: agent.rs  mod.rs
src/monitoring/: mod.rs
src/pipeline/: mod.rs
src/server/: mod.rs
src/tokens/: mod.rs
src/types/: agent.rs  cluster.rs  mod.rs  workflow.rs
tests/: api_test.rs  cli_test.rs  integration_test.rs  llm_api_test.rs  startup_test.rs  stress_test.rs
