[package]
name = "nexa-core"
version = "1.3.0"
edition = "2021"
description = "High-performance WebSocket server implementation"
authors = ["Your Name <your.email@example.com>"]

[[bin]]
name = "nexa"
path = "src/main.rs"

[dependencies]
tokio = { version = "1.43.0", features = ["full"] }
tokio-tungstenite = "0.21.0"
tungstenite = "0.21.0"
futures = "0.3.31"
uuid = { version = "1.12.1", features = ["v4", "serde"] }
once_cell = "1.19"
log = "0.4"
env_logger = "0.11"
clap = { version = "4.5.27", features = ["derive"] }
iced = { version = "0.10", features = ["tokio", "debug", "wgpu", "system"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
serde_yaml = "0.9"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2.0.11"
utoipa = { version = "4.2", features = ["actix_extras"] }
ctrlc = "3.4"
sysinfo = "0.30.13"
nix = { version = "0.27.1", features = ["process", "signal"] }
sha2 = "0.10.8"
libc = "0.2.153"
hashring = "0.3.2"
parking_lot = "0.12"
dashmap = "5.5.3"
tokio-util = { version = "0.7.10", features = ["codec"] }
num_cpus = "1.16"
sys-info = "0.9"
rand = { version = "0.8", features = ["small_rng"] }
mdns-sd = "0.13.2"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }

[target.'cfg(target_os = "macos")'.dependencies]
reqwest = { version = "0.11", default-features = false, features = ["native-tls", "json"] }

[target.'cfg(target_os = "linux")'.dependencies]
reqwest = { version = "0.11", default-features = false, features = ["native-tls-vendored", "json"] }

[dev-dependencies]
tokio-test = "0.4.3"
test-log = { version = "0.2", features = ["trace"] }
proptest = "1.4"
tempfile = "3.10.1"
once_cell = "1.20"
criterion = { version = "0.5", features = ["async_tokio"] }
hyper = { version = "0.14", features = ["full"] }

[[bench]]
name = "cluster_bench"
harness = false

[[bench]]
name = "loadbalancer_bench"
harness = false

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "unwind"
