[package]
name = "nexa-core"
version = "0.1.0"
edition = "2021"
default-run = "nexa"
description = "High-performance multi-agent system management tool"
authors = ["Nexa Team"]

[dependencies]
tokio = { version = "1.36", features = ["full"] }
tokio-tungstenite = "0.21.0"
tungstenite = "0.21.0"
futures = "0.3"
uuid = { version = "1.7", features = ["v4", "serde"] }
once_cell = "1.19"
log = { version = "0.4", features = ["std", "serde"] }
env_logger = "0.11"
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1.0"
anyhow = "1.0"
ctrlc = "3.4"
sysinfo = { version = "0.30", features = ["serde"] }
nix = { version = "0.27", features = ["process", "signal"] }
sha2 = "0.10"
libc = "0.2"
hashring = "0.3"
parking_lot = "0.12"
dashmap = "6.1"
tokio-util = { version = "0.7", features = ["codec"] }
num_cpus = "1.16"
sys-info = "0.9"
rand = { version = "0.8", features = ["small_rng"] }
mdns-sd = "0.13"
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", features = ["env-filter", "local-time", "json"] }
tracing-log = "0.2"
tracing-appender = "0.2"
directories = "6.0"
async-std = { version = "1.12", features = ["attributes"] }
dirs = "5.0"
lazy_static = "1.4"
reqwest = { version = "0.11", features = ["json"] }
crossterm = "0.27"

[target.'cfg(target_os = "macos")'.dependencies]
reqwest = { version = "0.11", default-features = false, features = ["native-tls", "json"] }

[target.'cfg(target_os = "linux")'.dependencies]
reqwest = { version = "0.11", default-features = false, features = ["native-tls-vendored", "json"] }

[dev-dependencies]
tokio-test = "0.4"
test-log = { version = "0.2", features = ["trace"] }
proptest = "1.4"
tempfile = "3.10"
criterion = { version = "0.5", features = ["async_tokio"] }
hyper = { version = "0.14", features = ["full"] }

[[bench]]
name = "cluster_bench"
harness = false

[[bench]]
name = "loadbalancer_bench"
harness = false

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "unwind"
