[package]
name = "nexa-core"
version = "0.1.0"
edition = "2021"
default-run = "nexa"
description = "High-performance multi-agent system management tool"
authors = ["Nexa Team"]

[features]
default = ["monitoring"]
monitoring = []

[dependencies]
tokio = { version = "1.43.0", features = ["full"] }
tokio-stream = { version = "0.1.17", features = ["net"] }
tokio-tungstenite = "0.26.1"
tungstenite = "0.26.1"
futures = "0.3.31"
uuid = { version = "1.7", features = ["v4", "serde"] }
once_cell = "1.19"
log = { version = "0.4", features = ["std", "serde"] }
env_logger = "0.11"
clap = { version = "4.5.29", features = ["derive"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
serde_yaml = "0.9.33"
chrono = { version = "0.4.39", features = ["serde"] }
thiserror = "2.0.11"
anyhow = "1.0.95"
ctrlc = "3.4"
sysinfo = { version = "0.33.1", features = ["serde", "multithread"] }
nix = { version = "0.29.0", features = ["process", "signal"] }
sha2 = "0.10.8"
libc = "0.2.149"
hashring = "0.3.6"
parking_lot = "0.12.3"
dashmap = "6.1.0"
tokio-util = { version = "0.7.13", features = ["codec"] }
num_cpus = "1.16.0"
sys-info = "0.9.1"
rand = { version = "0.9.0", features = ["small_rng"] }
mdns-sd = "0.13.2"
tracing = { version = "0.1.41", features = ["log"] }
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "local-time", "json"] }
tracing-log = "0.2.0"
tracing-appender = "0.2.3"
directories = "6.0.0"
async-std = { version = "1.13.0", features = ["attributes"] }
dirs = "6.0.0"
lazy_static = "1.4"
reqwest = { version = "0.12.12", features = ["json"] }
crossterm = { version = "0.28.1", features = ["event-stream"] }
daemonize = "0.5.0"
axum = { version = "0.8.1", features = ["json", "macros"] }
tower = { version = "0.5.2", features = ["util"] }
tower-http = { version = "0.6.2", features = ["cors", "trace"] }
hyper = { version = "1.6.0", features = ["full"] }
hyper-util = { version = "0.1.10", features = ["tokio", "server", "http1"] }
utoipa = { version = "5.3.1", features = ["axum_extras", "chrono"] }
utoipa-swagger-ui = { version = "9.0.0", features = ["axum"] }
http-body-util = "0.1.2"
rustc_version_runtime = "0.3.0"

[target.'cfg(target_os = "macos")'.dependencies]
reqwest = { version = "0.12.12", default-features = false, features = ["native-tls", "json"] }

[target.'cfg(target_os = "linux")'.dependencies]
reqwest = { version = "0.12.12", default-features = false, features = ["native-tls-vendored", "json"] }

[dev-dependencies]
tokio-test = "0.4.4"
test-log = { version = "0.2.17", features = ["trace"] }
proptest = "1.6.0"
tempfile = "3.16.0"
criterion = { version = "0.5.1", features = ["async_tokio"] }
hyper = { version = "1.6.0", features = ["full"] }

[[bench]]
name = "cluster_bench"
harness = false

[[bench]]
name = "loadbalancer_bench"
harness = false

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "unwind"
[patch.crates-io]
